
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heatherlogan.songle.GameActivity"
    android:background="@color/white"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="110sp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingBottom="30dp"
        android:id="@+id/textView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/linlayoutmain"
        android:orientation="vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:paddingTop="40dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">



        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_marginBottom="10dp"
            android:background="@drawable/mybutton"
            android:text="@string/newgame"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/scoreboardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/mybutton"
            android:text="@string/scoreboard"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:onClick="openScoreboard"
            android:textColor="@color/lightGrey"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/extrasButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/options"
            android:background="@drawable/mybutton"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="5dp"
            />

    </LinearLayout>


</RelativeLayout>
