...
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center"
        android:weightSum="1">

    <Button
            android:id="@+id/yesButton"
            android:textColor="@color/lightGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Yes"
            android:layout_gravity="center"
            android:textSize="30dp"
...
