...
              android:background="@drawable/myanalog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:text="Unlocked Songs"
        android:textSize="35dp"
        android:padding="10dp"
        android:background="@color/blue"
...
