<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/myanalog"
              android:layout_width="match_parent"
              android:layout_height="250dp"
              android:padding="15dp"
              android:weightSum="1">

    <TextView
        android:id="@+id/guessHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.17"
        android:textColor="@color/grey"
        android:text="Guess Song"
        android:textAlignment="center"
        android:textSize="45dp"/>


    <EditText
        android:layout_margin="10dp"
        android:id="@+id/songGuessEnter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/guessHeader"
        android:hint="Enter Song Title"
        android:background="#EEEEEE"
        android:textColorHint="@color/blue"
        android:textColor="@color/grey"
        android:ems="10"
        android:inputType="text"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/songGuessEnter"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        >


        <Button
            android:textAllCaps="false"
            android:id="@+id/enterButton"
            android:textColor="@color/lightGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Enter"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:background="@drawable/mybutton"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/gobackButton"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="Go Back"
            android:textColor="@color/lightGrey"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:background="@drawable/mybutton"
            android:layout_weight="0.5"/>


    </LinearLayout>

</LinearLayout>