<resources>
    <string name="app_name">Songle</string>
    <string name="hello_world">Hello world!</string>
    <string name="songle_name">Songle</string>
    <string name="newgame">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="options">Options</string>
    <string name="google_api_key">AIzaSyDzDbVgPEyV_NCaXfPlsD9mC1ou0g8R_SI</string>
    <string name="vm">View Map</string>
    <string name="view_col">View Collected Words</string>
    <string name="guess">Guess The Song</string>
    <string name="bk_home">Back to Home Screen</string>
    <string name="back_to_home_screen">Back to Home Screen</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">XML Error</string>
    <string name="title_activity_testing_parser">TestingParser</string>
    <string name="playing_songle">Playing Songle</string>
    <string name="time_played_00_00">Time Played: 00.00</string>
    <string name="howtoplay1">Secret words are scattered around Edinburgh University central area which are taken from a song. The objective of this game is to collect these words and guess the song.  A map guides you to the location of hidden words and you can discover them by clicking on them when you are within 2 metres of them. The location of each word is represented by a coloured marker, the colour representing how interesting the word is.</string>
    <string name="how2">Very easy shows all of the word locations and has very interesting, interesting/ not boring and boring markers. Easy shows all of the word locations and has interesting/not boring and boring markers. Medium shows 75% of the word locations and has interesting, not boring and boring markers. Hard shows 50% of the word locations and has not boring and boring markers. Very hard shows 25% of the word locations and all markers are unclassified.</string>
    <string name="howtoplay2">Very easy shows all of the word locations and has very interesting, interesting/ not boring and boring markers. Easy shows all of the word locations and has interesting/not boring and boring markers. Medium shows 75%% of the word locations and has interesting, not boring and boring markers. Hard shows 50%% of the word locations and has not boring and boring markers. Very hard shows 25%% of the word locations and all markers are unclassified.</string>
    <string name="StepCountNotAvailable">Step counter not available</string>
    <string name="gethint">Get Hint</string>
    <string name="giveup">Give Up</string>
    <string name="collectedwords">Collected Words</string>
    <string name="word">Word</string>
    <string name="lineposition">Line: Position</string>
    <string name="go_back">Go back</string>
    <string name="main_screen">Main Screen</string>
</resources>

