<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heatherlogan.songle.GameActivity"
    android:background="@color/white"
    android:paddingTop="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playing_songle"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:id="@+id/playingSongleTV"/>



    <Chronometer
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playingSongleTV"
        android:textSize="25sp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:textColor="@color/grey"
        android:id="@+id/chronometer"
        android:saveEnabled="false"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chronometer"
        android:text="Steps: 0"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:id="@+id/stepCounterTV"
        android:saveEnabled="false"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linlayoutgame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/playingSongleTV">

        <Button
            android:id="@+id/view_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:layout_weight="0.25"
            android:text="@string/vm"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/view_collected_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/mybutton"
            android:text="@string/view_col"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/guess_song_bttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/mybutton"
            android:text="@string/guess"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/getHintBttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:layout_weight="0.25"
            android:text="@string/gethint"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/give_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/mybutton"
            android:text="@string/giveup"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGrey"
            android:layout_margin="10dp"/>

    </LinearLayout>


</RelativeLayout>
